--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@clerk/nextjs": "^6.18.0",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
     "@vercel/blob": "^1.0.0",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^12.9.4",
@@ -26,6 +29,7 @@
     "markdown-draft-js": "^2.4.0",
     "nanoid": "^5.0.4",
     "next": "^14.2.28",
+    "next-themes": "^0.4.6",
     "playwright": "^1.52.0",
     "prisma": "^5.7.1",
     "puppeteer": "^24.7.2",
