--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.303.0",
     "markdown-draft-js": "^2.4.0",
     "nanoid": "^5.0.4",
@@ -39,6 +39,8 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
+    "react-use-measure": "^2.1.7",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
