--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.18.0",
+    "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^3.3.3",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@types/bcrypt": "^5.0.2",
     "@vercel/blob": "^1.0.0",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
@@ -29,6 +36,7 @@
     "markdown-draft-js": "^2.4.0",
     "nanoid": "^5.0.4",
     "next": "^14.2.28",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "playwright": "^1.52.0",
     "prisma": "^5.7.1",
