--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "react-use-measure": "^2.1.7",
+    "sharp": "^0.34.2",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
